[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://art/game over (3).png" type="Texture" id=2]
[ext_resource path="res://art/Poco.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/dead-8bit-41400.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 56
outline_size = 2
outline_color = Color( 0.898039, 0.0823529, 0.0823529, 1 )
extra_spacing_top = -19
extra_spacing_bottom = 2
extra_spacing_char = 3
extra_spacing_space = 21
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 39
outline_size = 2
outline_color = Color( 0.309804, 0.435294, 0.498039, 1 )
extra_spacing_bottom = 12
extra_spacing_char = -2
font_data = ExtResource( 3 )

[node name="GameOver" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 365 )
scale = Vector2( 1, 0.85 )
texture = ExtResource( 2 )

[node name="QuitButton" type="Button" parent="."]
margin_left = 951.0
margin_top = 552.0
margin_right = 1179.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 1 )
text = "QUIT "
align = 2
icon_align = 1

[node name="RestartButton" type="Button" parent="."]
margin_left = 105.0
margin_top = 553.0
margin_right = 339.0
margin_bottom = 662.0
custom_fonts/font = SubResource( 2 )
text = "Restart Level"

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 2.0

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
